# graphite

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
graphite/: __init__.py  data.py  graph.py  util.py
graphite/nn/: __init__.py  basis.py  loss.py  order.py
graphite/nn/conv/: __init__.py  e3nn_basic_conv.py  e3nn_basic_conv_lengthless.py  e3nn_nequip_interaction.py  e3nn_self_attention.py
graphite/nn/models/: __init__.py  alignn.py  alignn_d.py  alignn_d_interpretable.py  e3nn_nequip.py  e3nn_phasenet_nequip.py  e3nn_phasenet_simple.py  e3nn_phasenet_simple_lengthless.py  e3nn_simple.py  e3nn_steinhardtnet.py  egcnn.py  egconv_gnn.py
notebooks/alignn/: alignn-demo.ipynb  demo.ipynb
notebooks/alignn/data/: D-alanine.mol  L-alanine.mol
notebooks/amorph-gen/: amorph-gen.ipynb  forward-model.ipynb
notebooks/amorph-gen/lit/datamodules/: __init__.py  structure_xanes.py
notebooks/amorph-gen/lit/modules/: __init__.py  forward.py  prior.py
notebooks/amorph-gen/tmp/: denoise-traj-posterior.extxyz  denoise-traj-prior.extxyz
notebooks/denoiser/: README.md  demo.ipynb  training-and-inference.ipynb
notebooks/denoiser/data/Cu/: 3400K-bcc.denoised.extxyz  3400K-bcc.dump  3400K-fcc.denoised.extxyz  3400K-fcc.dump  3400K-hcp.denoised.extxyz  3400K-hcp.dump  ideal-bcc.dump  ideal-fcc.dump  ideal-hcp.dump
notebooks/denoiser/data/SiO2/: 1000K-a-cristobalite.denoised.extxyz  1000K-a-cristobalite.poscar  1000K-b-cristobalite.denoised.extxyz  1000K-b-cristobalite.poscar  1000K-b-quartz.denoised.extxyz  1000K-b-quartz.poscar  ideal-a-quartz.poscar  (+3 more)
notebooks/denoiser/models/: Cu-denoiser.pt  DC3-classifier.pt  DC3-denoiser.pt  SiO2-denoiser.pt
notebooks/score-dynamics/: ala-dipep-rollout.extxyz  demo.ipynb
notebooks/score-dynamics/data/: ala-dipep-dxdv-1ps-nvt-minisize.npz  ala-dipep-minidataset.hdf5  butane-dxdv-1ps-nvt-minisize.npz
notebooks/sodas/: demo.ipynb  training-and-inference.ipynb
notebooks/sodas/data/: solid-liquid-interface.poscar  solid-liquid-interface.sodas-pred.extxyz
notebooks/sodas/models/: 20221006-EGConv-r3.5.pt  20230407-GatedGCN-r3.5.pt
scripts/alignn_d/: cmdline_args.py  train.py
scripts/nps_phase/inference/: cmdline_args.py  inference.py
scripts/nps_phase/train/: args_phasenet.py  train_phasenet.py
scripts/sodas/inference/: cmdline_args.py  inference.py
scripts/sodas/train/: cmdline_args.py  train.py
src/graphite/: graph.py  utils.py
src/graphite/data/: __init__.py  angular_graph.py  mol.py
src/graphite/diffusion/: __init__.py  dpm_solver.py  general.py  periodic.py  score_dynamics.py
src/graphite/nn/: __init__.py  basis.py  loss.py  mlp.py  order.py
src/graphite/transforms/: __init__.py  add_edges.py  downselect_edges.py  downselect_periodic_edges.py  label_strong_bonds.py  mask_edges.py  periodic_radius_graph.py  radius_graph.py  radius_graph_ase.py  rattle_particles.py
src/graphite/utils/: __init__.py  alignn.py  alignnd.py  graph.py  smiles.py  utils.py
(+137 files in other folders)
