[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphite"
version = "0.0.1"
description = "A library for implementing graph network models based on atomic structures."
authors = [{ name = "Tim Hsu", email = "hsu16@llnl.gov" }]
maintainers = [{ name = "Tim Hsu", email = "hsu16@llnl.gov" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch>=2.0.1", "torch_geometric"]

[project.urls]
repository = "https://github.com/llnl/graphite"

[tool.setuptools.packages.find]
where = ["src"]
