[metadata]
name = graphite
version = 0.0.1
author = Tim Hsu
author_email = hsu16@llnl.gov
description = A repository for implementing graph network models based on atomic structures.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LLNL/graphite
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[option]
packages = find:
python_requires = >= 3.7
