[metadata]
name = graphite
version = 0.0.1
author = Tim Hsu
author_email = hsu16@llnl.gov
description = A library for implementing graph network models based on atomic structures.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/llnl/graphite

[option]
package_dir=
    =src
packages=find:
python_requires = >= 3.7
install_requires =
    ase
    torch>=1.8.1
    torch-geometric>=2.0.1

[options.packages.find]
where=src
